--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>The pages you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -51,6 +51,14 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+
+  .background {
+  background-color: #9b9ae5;
+  font-family: "Montserrat", sans-serif;
+  background: url(Homepage.png);
+  background-repeat: no-repeat;
+  background-size: 395px 788px;
+}
   </style>
 </head>
 
