--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The pages you were looking for doesn't exist (404)</title>
+  <title> Oops, the page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
-    background-color: #EFEFEF;
+    background-color: #9b9ae5;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
@@ -26,7 +26,7 @@
     border-top: #B00100 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
-    background-color: white;
+    background-color: #e59ad5;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
@@ -40,7 +40,7 @@
   .rails-default-error-page div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
-    background-color: #F7F7F7;
+    background-color: #e59ad5;
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -66,8 +66,9 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
+      <h1>Oops, the page you were looking for doesn't exist (404)</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
+      <!-- <img src="../app/assets/images/crying-face.png" alt="404" width="200" height="200"> -->
     </div>
     <p>If you are the application owner check the logs for more information.</p>
   </div>
