--- a/public/422.html
+++ b/public/422.html
@@ -1,60 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name=“viewport” content=“width=device-width,initial-scale=1">
-  <link rel=“preconnect” href=“https://fonts.googleapis.com”>
-  <link rel=“preconnect” href=“https://fonts.gstatic.com” crossorigin>
-  <link href=“https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap” rel=“stylesheet”>
+  <title>Oops, the change you wanted was rejected (422)</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .main-error {
-    background-color: #F7F7F7;
+  .rails-default-error-page {
+    background-color: #9b9ae5;
     color: #2E2F30;
     text-align: center;
-    margin: 0;
-    font-family: ‘Poppins’, sans-serif;
-    overscroll-behavior: none;
-  }
-  .guitar {
-    width: 100%;
-    object-fit: cover;
-  }
-  .numbers {
-    color: #008ACC;
-    font-size: 80px;
-    margin: 40px 0 0 0;
-    text-shadow: 2px 2px 1px #5C5656;
-    }
-  .error-head {
-    color: #008ACC;
-    font-size: 30px;
+    font-family: arial, sans-serif;
     margin: 0;
   }
-  .error-button {
-    background: #008ACC;
-    color: white;
-    font-family: ‘Poppins’;
-    font-size: 20px;
-    border-radius: 6px;
-    border: none;
-    padding: 5px 9px;
-    transition: 0.5s;
-    text-decoration: none;
+
+  .rails-default-error-page div.dialog {
+    width: 95%;
+    max-width: 33em;
+    margin: 4em auto 0;
   }
-  .error-button:hover {
-    background-color: #9DCA04;
+
+  .rails-default-error-page div.dialog > div {
+    border: 1px solid #CCC;
+    border-right-color: #999;
+    border-left-color: #999;
+    border-bottom-color: #BBB;
+    border-top: #B00100 solid 4px;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    background-color: #e59ad5;
+    padding: 7px 12% 0;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
+
+  .rails-default-error-page h1 {
+    font-size: 100%;
+    color: #730E15;
+    line-height: 1.5em;
+  }
+
+  .rails-default-error-page div.dialog > p {
+    margin: 0 0 1em;
+    padding: 1em;
+    background-color: #e59ad5;
+    border: 1px solid #CCC;
+    border-right-color: #999;
+    border-left-color: #999;
+    border-bottom-color: #999;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top-color: #DADADA;
+    color: #666;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
   </style>
 </head>
-<body class=“main-error”>
-  <!-- This file lives in public/404.html -->
-  <div class=“dialog”>
+
+<body class="rails-default-error-page">
+  <!-- This file lives in public/422.html -->
+  <div class="dialog">
     <div>
-      <h1 class=“numbers”>404</h1>
-      <h2 class=“error-head”>Uh oh! Something went wrong</h2>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Oops, the change you wanted was rejected.</h1>
+      <p>Maybe you tried to change something you didn't have access to.</p>
     </div>
+    <p>If you are the application owner check the logs for more information.</p>
   </div>
-<img class=“guitar” src=“https://www.kindpng.com/picc/m/47-475831_ukulele-bass-guitar-illustration-broken-guitar-illustration-hd.png” alt=“guitar”>
-<button class=“error-button”><a class=“error-button” href=“javascript:window.history.back()“>Go back</a></button>
 </body>
 </html>
