changed the name of the classes in each of the error htmls

--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
   <title> Oops, the page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .halfway-error-page {
     background-color: #9b9ae5;
     color: #2E2F30;
     text-align: center;
@@ -12,13 +12,13 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
+  .halfway-error-page div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
+  .halfway-error-page div.dialog > div {
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -31,13 +31,13 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
-  .rails-default-error-page h1 {
+  .halfway-error-page h1 {
     font-size: 100%;
     color: #730E15;
     line-height: 1.5em;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .halfway-error-page div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #e59ad5;
@@ -62,7 +62,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="halfway-error-page">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
@@ -70,7 +70,6 @@
       <p>You may have mistyped the address or the page may have moved.</p>
       <!-- <img src="../app/assets/images/crying-face.png" alt="404" width="200" height="200"> -->
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
