--- a/public/422.html
+++ b/public/422.html
@@ -4,7 +4,7 @@
   <title>Oops, the change you wanted was rejected (422)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .halfway-error-422 {
     background-color: #9b9ae5;
     color: #2E2F30;
     text-align: center;
@@ -12,13 +12,13 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
+  .halfway-error-422 div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
+  .halfway-error-422 div.dialog > div {
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -31,13 +31,13 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
-  .rails-default-error-page h1 {
+  .halfway-error-422 h1 {
     font-size: 100%;
     color: #730E15;
     line-height: 1.5em;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .halfway-error-422 div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #e59ad5;
@@ -54,14 +54,13 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="halfway-error-422">
   <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
       <h1>Oops, the change you wanted was rejected.</h1>
       <p>Maybe you tried to change something you didn't have access to.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
